--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -41,9 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Elipse.cs" />
     <Compile Include="Gender.cs" />
+    <Compile Include="IArea.cs" />
+    <Compile Include="Line.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rectangle.cs" />
+    <Compile Include="Shape.cs" />
+    <Compile Include="Shape1D.cs" />
+    <Compile Include="Shape2D.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
