--- a/Services.Interfaces/Services.Interfaces.csproj
+++ b/Services.Interfaces/Services.Interfaces.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{76BDF79C-F004-408E-B7FA-54A8D14A2682}</ProjectGuid>
+    <ProjectGuid>{7E6DDC4E-1096-4A8C-8D0F-84D5334707E2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Models</RootNamespace>
-    <AssemblyName>Models</AssemblyName>
+    <RootNamespace>Services.Interfaces</RootNamespace>
+    <AssemblyName>Services.Interfaces</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,17 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Elipse.cs" />
-    <Compile Include="Entity.cs" />
-    <Compile Include="Gender.cs" />
-    <Compile Include="IArea.cs" />
-    <Compile Include="Line.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="IService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rectangle.cs" />
-    <Compile Include="Shape.cs" />
-    <Compile Include="Shape1D.cs" />
-    <Compile Include="Shape2D.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj">
+      <Project>{76bdf79c-f004-408e-b7fa-54a8d14a2682}</Project>
+      <Name>Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
