--- a/ConsoleApp/App.config
+++ b/ConsoleApp/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IPeopleService" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/WcfServiceLibrary/PeopleService/"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPeopleService"
+                contract="ServiceReference.IPeopleService" name="BasicHttpBinding_IPeopleService" />
+        </client>
+    </system.serviceModel>
 </configuration>
